--- a/figures/07_model-selection.Rmd
+++ b/figures/07_model-selection.Rmd
@@ -51,7 +51,7 @@ re_global          <- left_join(re_global, pred_key, by = c("term" = "var")) %>%
 #   arrange(desc(`50%`))
 ```
 
-```{r tp_fe, out.width="3.25in", out.height="4in"}
+```{r tp_fe, out.width="3.45in", out.height="4in"}
 # lapply(re_brms, function(x) x $formula) 
 # re_brms[[6]]$formula
 best_tp        <- 6 # 6 is best tp model with random effects
@@ -76,16 +76,21 @@ gg_tp <- spread_draws(fit_tp, `b_.*`, regex = TRUE) %>%
     quantile(value, probs=c(0.05,0.5,0.95))))) %>% unnest() %>%
   tidyr::spread(name, value) %>%
   dplyr::bind_rows(
-    dplyr::select(re_global[best_tp,], -term, -response)) %>%
+    dplyr::select(re_global[best_tp,], -term, -response), 
+    data.frame(pretty = "", `5%` = "", `50%` = "", `95%` = "", 
+               stringsAsFactors = FALSE)
+    ) %>%
   rowwise() %>%
   mutate(signif = (`5%` > 0 & `95%` > 0)| (`5%` < 0 & `95%` < 0)) %>%
   left_join(dplyr::select(pred_key, pretty, category)) %>%
+  mutate(category = tidyr::replace_na(category, "Land-use cover")) %>%
   mutate(category = factor(category, 
                            levels = rev(c("Nutrient inputs", "Nutrient transport", 
                                       "Buffer configuration", "Lake", 
                                       "Land-use cover")))) %>%
   mutate(category = forcats::fct_recode(category, 
-                                        Buffer = "Buffer configuration")) %>%
+                                        Buffer = "Buffer configuration", 
+                                        LULC = "Land-use cover")) %>%
   arrange(category) %>%
   ungroup() %>% mutate(pretty = factor(pretty, levels = pretty)) %>%
   arrange(category, pretty)
@@ -97,11 +102,13 @@ gg_tp_fe <-
   expand_limits(y = -1.8) +
   geom_rect(ymin = -0.6, ymax = -0.6 - 2, xmin = 0, xmax = nrow(gg_tp) + 1, 
               fill = "transparent") +
+  # y-axis labels
   geom_text(aes(x = pretty, label = pretty, color = signif), 
             y = -0.65, vjust = 0.5, hjust = "right") + 
   scale_color_manual(values = c("FALSE" = "black", "TRUE" = "red")) +
   geom_hline(yintercept = 0) +
-  scale_y_continuous(breaks = seq(from = -0.6, to  = 0.4, by = 0.2), 
+  # x-axis labels
+  scale_y_continuous(breaks = seq(from = -0.6, to  = 0.6, by = 0.2), 
                      labels = scales::number_format(accuracy = 0.1)) +
   coord_flip() +
   theme(axis.text.y = element_blank(), 
@@ -120,7 +127,8 @@ gg_tp_fe <-
         panel.grid = element_blank(),
         rect = element_rect(fill = "transparent"), 
         plot.title = element_text(hjust = 0.5, face = "bold")) + 
-    annotate(x=0, xend=0, y=-0.6, yend=0.4, 
+    # x-axis line length; controls dot-plot extent
+    annotate(x=0, xend=0, y=-0.6, yend=0.6, 
              colour="black", lwd=0.9, geom="segment") 
 ```
 
@@ -146,7 +154,7 @@ gg_tp_re <- ggplot(data = fit_tp$re) +
 gg_tp_re
 ```
 
-```{r tn_fe, out.width="3.25in", out.height="4in"}
+```{r tn_fe, out.width="3.45in", out.height="4in"}
 # lapply(re_brms, function(x) x$formula) 
 # re_brms[[11]]$formula
 best_tn        <- 11 # 11 is best tn model with random effects
@@ -166,16 +174,21 @@ gg_tn <- spread_draws(fit_tn, `b_.*`, regex = TRUE) %>%
     quantile(value, probs=c(0.05,0.5,0.95))))) %>% unnest() %>%
   tidyr::spread(name, value) %>%
   dplyr::bind_rows(
-    dplyr::select(re_global[best_tn,], -term, -response)) %>%
+    dplyr::select(re_global[best_tn,], -term, -response), 
+    data.frame(pretty = "", `5%` = "", `50%` = "", `95%` = "", 
+               stringsAsFactors = FALSE)
+    ) %>%
   rowwise() %>%
   mutate(signif = (`5%` > 0 & `95%` > 0)| (`5%` < 0 & `95%` < 0)) %>%
   left_join(dplyr::select(pred_key, pretty, category)) %>%
+  mutate(category = tidyr::replace_na(category, "Land-use cover")) %>%
   mutate(category = factor(category, 
                            levels = rev(c("Nutrient inputs", "Nutrient transport", 
                                       "Buffer configuration", "Lake", 
                                       "Land-use cover")))) %>%
   mutate(category = forcats::fct_recode(category, 
-                                        Buffer = "Buffer configuration")) %>%
+                                        Buffer = "Buffer configuration", 
+                                        LULC = "Land-use cover")) %>%
   arrange(category) %>%
   ungroup() %>% mutate(pretty = factor(pretty, levels = pretty)) %>%
   arrange(category, pretty)
@@ -188,10 +201,10 @@ gg_tn_fe <-
   geom_rect(ymin = 0.44, ymax = 0.44 + 2, xmin = 0, xmax = nrow(gg_tn) + 1, 
               fill = "transparent") +
   geom_text(aes(x = pretty, label = pretty, color = signif), 
-            y = 0.44, vjust = 0.5, hjust = "left") + 
+            y = 0.65, vjust = 0.5, hjust = "left") + 
   scale_color_manual(values = c("FALSE" = "black", "TRUE" = "red")) +
     geom_hline(yintercept = 0) +
-  scale_y_continuous(breaks = seq(from = -0.6, to  = 0.4, by = 0.2), 
+  scale_y_continuous(breaks = seq(from = -0.6, to = 0.6, by = 0.2), 
                      labels = scales::number_format(accuracy = 0.1)) +
   coord_flip() +
   theme(axis.text.y = element_blank(), 
@@ -209,7 +222,7 @@ gg_tn_fe <-
         panel.grid = element_blank(),
         rect = element_rect(fill = "transparent"), 
         plot.title = element_text(hjust = 0.5, face = "bold")) + 
-    annotate(x=0, xend=0, y=-0.6, yend=0.4, 
+    annotate(x=0, xend=0, y=-0.6, yend=0.6, 
              colour="black", lwd=0.9, geom="segment")
 
 equalize_panels <- function(x){
