--- a/figures/07_model-selection.Rmd
+++ b/figures/07_model-selection.Rmd
@@ -147,7 +147,7 @@ gg_tp_re <- ggplot(data = fit_tp$re) +
   coord_flip() +
   cowplot::theme_cowplot() +
   theme(rect = element_rect(fill = "transparent")) +
-  ggtitle("TP ~ Ag slope") + xlab("Zone ID") + ylab("") +
+  ggtitle("TP") + xlab("Zone ID") + ylab("") +
   theme(plot.title = element_text(hjust = 0.5, face = "bold")) +
   theme(legend.position = 0)
 
@@ -255,8 +255,8 @@ gg_hu4 <-
           axis.title = element_blank(), 
           legend.title = element_blank()) + 
     scale_fill_manual(values = colors, levels(hu4$n_cat)) + 
-    guides(guide_legend(nrow = 2))  +
-  ggtitle("Ag sensitive regions")
+    guides(guide_legend(nrow = 2))  # +
+  # ggtitle("Ag sensitive regions")
 
 gg_hu4
 ```
@@ -276,7 +276,7 @@ gg_tn_re <- ggplot(data = fit_tn$re) +
   coord_flip() +
   cowplot::theme_cowplot() +
   theme(rect = element_rect(fill = "transparent")) +
-  ggtitle("TN ~ corn slope") + xlab("Zone ID") + ylab("") +
+  ggtitle("TN") + xlab("Zone ID") + ylab("") +
   theme(plot.title = element_text(hjust = 0.5, face = "bold")) +
   theme(legend.position = 0)
 
