--- a/manuscript/figures.Rmd
+++ b/manuscript/figures.Rmd
@@ -24,7 +24,7 @@ knitr::include_graphics("../figures/re-comparison-1.pdf")
 ```
 
 ```{r 03_model_summary, results='asis', warning=FALSE, echo = FALSE}
-knitr::kable('\\includegraphics{"../tables/03_model_summary"}', col.names = NULL, caption = "Model selection diagnostics")
+knitr::kable('\\includegraphics[width=5in]{"../tables/03_model_summary"}', col.names = NULL, caption = "Model selection diagnostics")
 ```
 
 ```{r fe-1, fig.cap = "Global (fixed effect) coefficient values and credible intervals. Values that do not overlap zero are shaded in red. Horizontal bars separate coefficients in distinct predictor categories. Coefficient estimates are reported relative to standardized predictor variables centered at zero with unit variance.", warning=FALSE, echo = FALSE}
