--- a/tables/03_model_summary.Rmd
+++ b/tables/03_model_summary.Rmd
@@ -51,7 +51,8 @@ options(knitr.kable.NA = "-")
 dt %>%
   # dplyr::filter(str_detect(response, "tp")) %>%
   # dplyr::select(-response) %>%
-  dplyr::rename("$R^2$" = r2) %>%
+  dplyr::rename("$R^2$" = r2, 
+                "LOO-ELPD" = elpd_diff) %>%
   knitr::kable(digits = 2, format = "markdown", caption = "TP Model R2", 
                row.names = FALSE)
 ```
