--- a/figures/07_model-selection.Rmd
+++ b/figures/07_model-selection.Rmd
@@ -148,7 +148,7 @@ gg_tp_re <- ggplot(data = fit_tp$re) +
   coord_flip() +
   cowplot::theme_cowplot() +
   theme(rect = element_rect(fill = "transparent")) +
-  ggtitle("TP") + xlab("Zone ID") + ylab("") +
+  ggtitle("TP") + xlab("Zone ID") +
   theme(plot.title = element_text(hjust = 0.5, face = "bold")) +
   theme(legend.position = 0)
 
@@ -278,7 +278,7 @@ gg_tn_re <- ggplot(data = fit_tn$re) +
   coord_flip() +
   cowplot::theme_cowplot() +
   theme(rect = element_rect(fill = "transparent")) +
-  ggtitle("TN") + xlab("Zone ID") + ylab("") +
+  ggtitle("TN") + xlab("Zone ID") +
   theme(plot.title = element_text(hjust = 0.5, face = "bold")) +
   theme(legend.position = 0)
 
@@ -295,7 +295,7 @@ cowplot::plot_grid(
       theme(axis.text.y = element_blank(), 
             axis.title.x = element_blank())), 
   rel_widths = c(1, 0.95)), 
-ggplot(data.frame(x = 1, y = 1, label = "Standardized coefficients", stringsAsFactors = FALSE)) + 
+ggplot(data.frame(x = 1, y = 1, label = "Standardized slopes", stringsAsFactors = FALSE)) + 
   geom_text(aes(x = x, y = y, label = label)) +
   theme_void(),
 ncol = 1, rel_heights = c(1, 0.05))
@@ -337,7 +337,8 @@ gg_hist <- ggplot(data = dt_predictors) +
   theme(rect = element_rect(fill = "transparent"), 
         strip.background = element_rect(fill = "transparent"), 
         strip.text = element_text(face = "bold")) +
-  facet_wrap(~pretty)
+  facet_wrap(~pretty) +
+  xlab("Standardized value")
 
 # line graph tn vs tp
 dt        <- readRDS("../data/dt_scaled.rds") %>%
@@ -384,10 +385,19 @@ gg_tn_re
 ```
 
 ```{r re}
-cowplot::plot_grid(gg_tp_re, 
+cowplot::plot_grid(
+cowplot::plot_grid(gg_tp_re + theme(axis.title.x = element_blank(), 
+                                     plot.margin = unit(c(0,0,0,0), "cm")),
                    gg_tn_re + theme(axis.text.y = element_blank(), 
-                                    axis.title.y = element_blank()), 
-                   rel_widths = c(1, 0.9))
+                                    axis.title.y = element_blank(), 
+                                    axis.title.x = element_blank(),
+                                    plot.margin = unit(c(0,0,0,0), "cm")), 
+                   rel_widths = c(1, 0.9)), 
+ggplot(data.frame(x = 0, y = 0, label = "Standardized coefficients", stringsAsFactors = FALSE)) + 
+  geom_text(aes(x = x, y = y, label = label), size = 5) +
+  theme_void() + 
+  theme(plot.margin = unit(c(0,0,0,0), "cm")),
+ncol = 1, rel_heights = c(1, 0.03))
 
 cowplot::plot_grid(gg_tp_re, 
                    gg_tn_re + 
