--- a/figures/11_map.Rmd
+++ b/figures/11_map.Rmd
@@ -16,11 +16,12 @@ source("../scripts/99_utils.R")
 # states        <- cl$states
 # states_shaded <- cl$states_shaded
 # study_bbox    <- cl$study_bbox
-study_bbox    <- st_read("../data/gis.gpkg", "study_bbox", quiet = TRUE)
+study_bbox    <- st_read("../data/gis.gpkg", "study_bbox", quiet = TRUE)[3,]
 ep            <- st_read("../data/gis.gpkg", "ep", quiet = TRUE)
 states_all    <- st_read("../data/gis.gpkg", "states_all", quiet = TRUE)
 states_focal  <- st_read("../data/gis.gpkg", "states_focal", quiet = TRUE)
 hu4_focal     <- st_read("../data/gis.gpkg", "hu4s_focal", quiet = TRUE)
+hu4_focal     <- st_crop(st_transform(hu4_focal, st_crs(study_bbox)), study_bbox) 
 
 # outline <- ne_countries(country = c("canada", "mexico", "united states of america"), 
 #                      returnclass = "sf")
