--- a/tables/01_predictors.Rmd
+++ b/tables/01_predictors.Rmd
@@ -15,6 +15,9 @@ library(kableExtra)
 suppressMessages(library(dplyr))
 library(magrittr)
 
+pred_key <- read.csv("../data/predictor_key.csv", 
+                     stringsAsFactors = FALSE)
+
 cdl_vars <- readRDS("../data/dt.rds") %>%
   dplyr::select(ag:wheat) %>%
   summarize_all(median, na.rm = TRUE) %>%
@@ -30,20 +33,32 @@ dt <- readRDS("../data/dt.rds") %>%
   group_by(variable) %>%
   mutate(value = as.numeric(value)) %>%
   mutate(q10 = quantile(value, probs = c(0.1), na.rm = TRUE),
+         q25 = quantile(value, probs = c(0.25), na.rm = TRUE),
          q50 = quantile(value, probs = c(0.5), na.rm = TRUE),
+         q75 = quantile(value, probs = c(0.75), na.rm = TRUE),
          q90 = quantile(value, probs = c(0.9), na.rm = TRUE), 
          ratio = q90 / q10, 
          n = sum(!is.na(value), na.rm = TRUE)) %>%
-  dplyr::distinct(signif(q10, 2), signif(q50, 2), signif(q90, 2), ratio, n) %>%
+  dplyr::distinct(signif(q10, 2), signif(q25, 2), signif(q50, 2), signif(q75, 2), signif(q90, 2), ratio, n) %>%
   dplyr::select(variable, 
          q10 = `signif(q10, 2)`,
-         q50 = `signif(q50, 2)`, 
+         q25 = `signif(q25, 2)`,
+         q50 = `signif(q50, 2)`,
+         q75 = `signif(q75, 2)`,
          q90 = `signif(q90, 2)`,
          q10_q90_ratio = ratio,
          n) %>%
   left_join(readRDS("../data/dt_units.rds"), by = "variable") %>%
   dplyr::select(variable, units, everything())
-  
+
+dt <- ungroup(dt)
+dt <- left_join(dt, pred_key, by = c("variable" = "var"))
+dt <- dplyr::filter(dt, !is.na(pretty))
+dt <- mutate(dt, pretty = paste0(pretty, " (", units, ")"), 
+             IQR = paste0(q25, " - ", q75))
+dt <- dplyr::select(dt, Variable = pretty, 
+                    Median = q50, IQR)
+
 knitr::kable(dt, digits = 0, format = "markdown") 
 #%>%
  # add_header_above(c(" ", " ", Ranges = 3, " ", " "))
